# SMEDL

./: .buildinfo  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README  README-api.md  README-development.md  README-language.md  README.md  TODO.md  bugs.txt  genindex.html  index.html  objects.inv  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/workflows/: gen_docs.yaml
_sources/: index.rst.txt
_sources/api/: ros.rst.txt
api/: api.html  full_api.html  index.html  rabbitmq.html  ros.html
coq/: .gitignore  AST.v  Elaborate.v  ElaborateCorrect.v  ElaboratedAST.v  Environment.v  EventEnv.v  Machine.v  Machine2.v  Makefile.coq  Notation.v  README.md  Semantics.v  Smedl.v  These.v  Types.v  Typing.v  TypingFacts.v  Util.v  VarEnv.v  _CoqProject
coq/alternative/: AST.v  EventEnv.v  Machine.v  Makefile  Typing.v  VarEnv.v  _CoqProject
doc/: codestyle.tex  smedl.tex  test_coverage_commands.txt
doc/old/: SMEDL Description.txt  smedl.tex
docs/: .gitignore  BugLinks.rtf  Description.rtf  Notes_aggregate8-28.txt  ProgModelGen_FinalReport_Penn.docx  SMEDL Design Decisions.txt  SMEDL Design Notes.txt  SMEDL Dev Notes.txt  StudentJobDescription.rtf  TODO  TODO.txt  conf.py  grako_commands.txt  smedl_syntax.py  test.smedl
docs/api/: api.rst  full_api.rst  index.rst  pedl.rst  rabbitmq.rst  ros.rst
docs/language/: a4smedl.rst  index.rst  smedl.rst
docs/old_docs/: SMEDL Dev Notes.txt  codestyle.tex
emacs/: smedl-mode.el
gramma_env/: pip-selfcheck.json
hsmedl/: Smedl.hs  hsmedl.cabal  smedl.cabal
hsmedl/test/: Arbitrary.hs  Main.hs  tests.smedl
language/: a4smedl.html  index.html  smedl.html
lib/pyelftools-0.22/: elf_dwarf_mapping.py
libmgen/: .gitignore  AUTHORS  DEVELOPING  README.md  configure.ac
libmgen.old/: COPYING
libmgen.old/src/: actions.h
libmgen/src/: Makefile.am  monitor_map.h
py/tmp/: 00.ast  08.ast  10.ebnf
rabbitmq/: node.c  producer.c
smedl/: __about__.py  __init__.py  about.json  mgen.py
smedl/architecture/: __init__.py  connectionExpr.py  event.py  interface.py  patternExpr.py
smedl/c_style/: __init__.py  actions.c  actions.h  amqp_utils.c  cJSON.h  mon_utils.c  mon_utils.h  monitor_map.c  monitor_map.h  monitor_wrapper.c  monitor_wrapper.h  object_mon.c  object_mon.cfg  object_mon.h  object_mon_old.c  object_mon_old.h  set_global_wrapper.c  set_global_wrapper.h  template.py
smedl/c_style_OLD/: actions.c  amqp_utils.h  mon_utils.h  monitor_map.c  monitor_wrapper.h  set_global_wrapper.c  set_global_wrapper.h  template.py
smedl/codegen/: Makefile  README-templates.md  __init__.py  defs.h  file.c  file.h  generator.py  global_wrapper.c  global_wrapper.h  local_wrapper.c  local_wrapper.h  manager.c  manager.h  mon.c  mon.h  rabbitmq.c  rabbitmq.cfg  rabbitmq.h  ros.cpp  ros_config.h  ros_config.inc  stub.c  stub.h
smedl/codegen/ros/: CMakeLists.txt  __init__.py  async.h  event.msg  global_wrapper_ros.cpp  global_wrapper_ros.h  node.cpp  node.h  package.xml  ros.cpp  ros.h  ros_config.inc  system.launch
smedl/codegen/ros/static/: __init__.py
smedl/fsm/: __init__.py  action.py  fsm.py  state.py  transition.py
smedl/parser/: README-grako.md  README-tatsu.md  __init__.py  a4smedl.ebnf  a4smedl.grako  a4smedl_parser.py  a4smedl_semantics.py  astToPython.py  common.ebnf  common.grako  common_semantics.py  exceptions.py  pedl.grako  pedl_classes.py  pedl_parser.py  smedl.ebnf  smedl.grako  smedl_classes.grako  smedl_classes.py  smedl_parser.py  smedl_semantics.py  smedl_symboltable.py  test.a4smedl
smedl/structures/: __init__.py  arch.py  expr.py  monitor.py
smedl/templates/: monitor_map.c  object_mon.c  object_mon.cfg  object_mon.h
src/: SimpleParserMon copy  SimpleParserMon copy 2  SimpleParserMon.pedl  SimpleParserMon.smedl  SimpleParserMon_mon.c  SimpleParserMon_mon.h  a.out  else_noaction.smedl  explorer.pedl  explorer.smedl  fsm.py  mgen.py  pedl.grako  pedl_parser.py  smedl.dot  smedl.grako  smedl_parser.py  smedl_parser_named.py  smedl_parser_test.py  smedl_semantics.py  smedl_symboltable.py  smedlgen.py  state.smedl  tab_example.smedl  test_fsm.py  test_mgen.py  test_smedl_symboltable.py  test_smedlgen.py
src/SimpleParserMon/: simple_parser.c
src/example1/: README  makemeander.txt  meander  meander-monitored  meander.c  meander.h  meander.pedl  meander.smedl  meander_fixedforparser.smedl  meander_generated.c  pedl_comments.txt  safemon.c
src/fsm/: __init__.py  action.py  fsm.py  state.py  transition.py
src/parser/: __init__.py  astToPython.py  pedl_parser.py  smedl.grako
src/parsers/: __init__.py  smedl_symboltable.py
src/pyelftools_utils/: elf_dwarf_mapping.py
src/templates/: monitor_map.h  object_mon.c  object_mon.h
src/test/: conditional.smedl  else_noaction.smedl  else_noaction_generated.c  evtatt.smedl  http_auth_codes.smedl  minimal.c  minimal_generated.c  onetwo-two.smedl  onetwo-two_generated.c  onetwo.c  onetwo.smedl  onetwo_generated.c  tab_example.smedl  tab_example_generated.c  test_commands.txt
src/test_inputs/: action_update.c  action_update.smedl  conditional.smedl  evtatt.smedl  minimal.c  minimal.smedl  onetwo-two.c  onetwo-two.smedl  onetwo.c  state.c
src/testcases/: test_commands.txt
sysense/: lldb_instr.py  object_sysclnt.cpp  object_sysclnt.h  template.py
test/nginx-release-0.5.0/: .hg_archival.txt
tests/: README-tests.md  all_tests.py  conftest.py  generate_basics_outputs.py  rabbitmq.py.1ch  rabbitmq.py.2ch  run_all_unittests.py  run_examples_test.py  test_atif.py  test_c_units.py  test_fsm.py  test_json.py  test_mgen.py  test_monitors.py  test_provenance.py  test_rabbitmq.py  test_smedl_symboltable.py  test_spv-rabbitmq.py  test_spv-rabbitmq2.py  test_spv.py  test_string.py  utils.py
tests-old/: generate_basics_outputs.py  test_atif.py  test_basics.py  test_fsm.py  test_spv.py
tests/ctests/: __init__.py  test_event_queue.c  test_global_event_queue.c  (+2 more)
tmp/: 03.ast  11.grako  g06.py  g11.py
vim/: a4smedl.vim  smedl.vim
zeromq/: broker  broker.c  broker.c~  broker_linux  node  node.c
(+570 files in other folders)
