name:          hsmedl
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@newartisans.com
category:      Language
build-type:    Simple
cabal-version: >=1.10

library
    default-language: Haskell2010
    exposed-modules:     
        Smedl
    build-depends:       
        base >=4.8 && <4.9
      , containers
      , exceptions
      , lens
      , parsec
      , transformers >=0.4 && <0.5

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: 
        base         >= 4 && < 5
      , hsmedl
      , here         >= 1.2.3
      , hspec        >= 1.8.3
      , logging      >= 1.3.0
      , monad-logger >= 0.3.4.1
      , text         >= 0.11.3.1
      , containers
      , exceptions
      , lens
      , parsec
