<package format="2">
  <name>smedl_{{sys.name}}</name>
  <version>0.0.0</version>
  <description>
    This package provides nodes for the {{sys.name}} monitoring system.
  </description>
  <maintainer email="TODO@example.com">John TODO Doe</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
